--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -1,22 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Pack Compへようこそ!</h1>
-<h2>旅行準備をもっとスマートに</h2>
-<div class="illustration">
-    <img src="{{ url_for('static', filename='images/undraw_traveling_c18z-3.svg') }}">
-</div>
+<div class="top-container">
+    <div class="top-text">
+        <h1>Pack Compへようこそ!</h1>
+        <h2>旅行準備をもっとスマートに</h2>
+    </div>
 
-<p class="agreement-text">
-    下記ボタンを選択することで、本サービスの利用規約および<br>
-    プライバシーポリシーに同意したことになります。
-</p>
+    <div class="illustration">
+        <img src="{{ url_for('static', filename='images/undraw_traveling_c18z-3.svg') }}">
+    </div>
 
-<div class="button-area1">
-    <a href="{{ url_for('auth.login')}}">新規登録/ログインして使う</a>
-    <p>
-        <a href="{{ url_for('auth.guest_login') }}">ゲストで試す</a>
+    <p class="agreement-text">
+        下記ボタンを選択することで、本サービスの利用規約および<br>
+        プライバシーポリシーに同意したことになります。
     </p>
+
+    <div class="button-area1">
+        <a href="{{ url_for('auth.login')}}">新規登録/ログインして使う</a>
+        <p>
+            <a href="{{ url_for('auth.guest_login') }}">ゲストで試す</a>
+        </p>
+    </div>
 </div>
 
 {% endblock %}
