--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,9 @@
     <body>
         <header>
             <h1><a href="{{ url_for('main.top')}}">Pack Comp</a></h1>
+            {% if current_user.is_authenticated %}
+                <a href="{{ url_for('auth.logout') }}" class="logout-btn">ログアウト</a>
+            {% endif %}
         </header>
 
         <ul class="flash-messages">
@@ -29,5 +32,11 @@
                 <a href="{{ url_for('main.contact') }}">お問い合わせ</a>
             </div>
         </footer>
+
+        <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
+        <script>
+            lucide.createIcons();
+        </script>
+
     </body>
 </html>
