--- a/app/templates/travels_list.html
+++ b/app/templates/travels_list.html
@@ -6,23 +6,27 @@
 <div class="travel_container">
     {% for travel in travels %}
     <div class="travel_card">
+        <a href="{{ url_for('main.items', travel_id=travel.id) }}" class="card-link"></a>
+
+        <!-- 削除ボタン（右上） -->
+        <form action="{{ url_for('main.delete_travel', travel_id=travel.id) }}" method="POST">
+            <button type="submit" class="delete-travel-btn" onclick="return confirm('本当に削除しますか？')">
+                <i data-lucide="trash-2"></i>
+            </button>
+        </form>
+
         <h3>{{ travel.title }}</h3>
         <div class="travel_image"
             style="background-image: url(\'{{ url_for('static', filename='images/sample.jpg') }}\');">
         </div>
         <p>{{ travel.departure_date }} 〜 {{ travel.return_date }}</p>
-        <a href="{{ url_for('main.items', travel_id=travel.id) }}" class="btn">持ち物リストを見る</a>
-        <form action="{{url_for('main.delete_travel', travel_id=travel.id)}}" method="POST" >
-            <button type="submit" onclick="return confirm('本当に削除しますか？')">削除</button>
-        </form>
+
     </div>
     {% endfor %}
 </div>
 
-<div class="button-area2">
+<div class="button-area1">
     <a href="{{ url_for('main.new_travel') }}" class="btn_create">新しい旅行を登録する</a>
 </div>
-
-<a href="{{ url_for('auth.logout') }}" class="logout-btn">ログアウト</a>
 
 {% endblock %}
