--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -334,24 +334,32 @@ footer .footer-links a:hover {
 /* 削除アイコンボタン */
 .delete-travel-btn {
     position: absolute;
-    top: 0px;
+    top: -1px;
     right: 0px;
     border: none;
     background: none;
-    border: none;
-    padding: 8px;       /* アイコン周りに透明パディング */
     cursor: pointer;
     z-index: 5;
 }
 
-.delete-travel-btn i {
+.edit-travel-btn {
+    position: absolute;
+    top: 0px;
+    left: -180px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.delete-travel-btn svg, .edit-travel-btn svg {
     font-size: 10px;
-    color: #999;
+    color: #333;
     pointer-events: auto;
     transition: 0.25s ease;
 }
 
-.delete-travel-btn:hover {
+.delete-travel-btn:hover svg, .edit-travel-btn:hover svg {
     transform: scale(1.1); /* ほんのり拡大 */
 }
 
