--- a/app/templates/edit_travel.html
+++ b/app/templates/edit_travel.html
@@ -7,7 +7,16 @@
 <form method="post" action="{{ url_for('main.edit_travel', travel_id=travel.id) }}">
     <div class="newtravel-container">    
         <label>旅行タイトル <br><input type="text" name="title" value="{{ travel.title }}"></label><br>
-        <label>目的地 <br><input type="text" name="destination" value="{{ travel.destination }}"></label><br>
+        <label>都道府県
+            <select id="prefecture">
+                {% for prefecture in destinations.keys() %}
+                    <option value="{{ prefecture }}">{{ prefecture }}</option>
+                {% endfor %}
+            </select>
+        </label><br>
+        <label>目的地
+            <select name="destination" id="city"></select>
+        </label><br>
         <label>出発日 <br><input type="date" name="departure_date" value="{{ travel.departure_date }}"></label><br>
         <label>帰着日 <br><input type="date" name="return_date" value="{{ travel.return_date }}"></label><br>
     </div>
@@ -33,4 +42,28 @@
         <a href="{{ url_for('main.travels_list') }}" class="btn">戻る</a>
     </div>
 </form>
+
+<script>
+const destinations = {{ destinations|tojson }};
+const prefectureSelect = document.getElementById("prefecture");
+const citySelect = document.getElementById("city");
+
+function updateCities() {
+    const cities = destinations[prefectureSelect.value] || [];
+    citySelect.innerHTML = "";
+    cities.forEach(city => {
+        const opt = document.createElement("option");
+        opt.value = city;
+        opt.textContent = city;
+        citySelect.appendChild(opt);
+    });
+}
+
+// 都道府県選択時に都市リスト更新
+prefectureSelect.addEventListener("change", updateCities);
+
+// 初期表示
+updateCities();
+</script>
+
 {% endblock %}
