add: transport選択にship追加

--- a/app/templates/edit_travel.html
+++ b/app/templates/edit_travel.html
@@ -31,6 +31,7 @@
             <label><input type="checkbox" name="transport" value="car" {% if 'car' in travel.transport %}checked{% endif %}> 車</label>
             <label><input type="checkbox" name="transport" value="train" {% if 'train' in travel.transport %}checked{% endif %}> 電車</label>
             <label><input type="checkbox" name="transport" value="plane" {% if 'plane' in travel.transport %}checked{% endif %}> 飛行機</label>
+            <label><input type="checkbox" name="transport" value="ship" {% if 'ship' in travel.transport %}checked{% endif %}> 船</label>
             <label><input type="checkbox" name="transport" value="bus" {% if 'bus' in travel.transport %}checked{% endif %}> バス</label>
         </div>
     </div>
